--- a/frontend/src/widgets/NotificationPanel/NotificationPanel.module.css
+++ b/frontend/src/widgets/NotificationPanel/NotificationPanel.module.css
@@ -88,3 +88,7 @@
     box-sizing: border-box;
   }
 }
+
+.NotificationPanel-list::-webkit-scrollbar {
+  display: none;
+}
